<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ran="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:orientation="vertical">

    <ScrollView
        android:id="@+id/awesomeqr_main_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <com.meng.picTools.lib.mengViews.MengEditText
                android:id="@+id/awesomeqr_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="@string/input_text"
                ran:textviewText="@string/contents"/>

            <com.meng.picTools.lib.mengViews.MengEditText
                android:id="@+id/awesomeqr_main_mengEdittext_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="800"
                ran:textviewText="@string/barcode_size"/>

            <com.meng.picTools.lib.mengViews.MengEditText
                android:id="@+id/awesomeqr_main_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="20"
                ran:textviewText="@string/margin_px"/>

            <com.meng.picTools.lib.mengViews.MengEditText
                android:id="@+id/awesomeqr_main_dotScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ran:edittextHint="0.3"
                ran:textviewText="@string/data_dot_scale"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/awesomeqr_main_autoColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/auto_color"/>

                <CheckBox
                    android:id="@+id/awesomeqr_main_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/crop_square"/>
            </LinearLayout>

            <com.meng.picTools.lib.mengViews.MengColorBar
                android:id="@+id/gif_arb_qr_main_colorBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/awesomeqr_main_imgPathTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_bg_img"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/awesomeqr_main_backgroundImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_image"/>

                <Button
                    android:id="@+id/awesomeqr_main_removeBackgroundImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove_image"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/awesomeqr_main_whiteMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/white_margin_on_background_image"/>

            <CheckBox
                android:id="@+id/awesomeqr_main_binarize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binarize_background_image"/>

            <com.meng.picTools.lib.mengViews.MengEditText
                android:id="@+id/awesomeqr_main_mengEdittext_binarizeThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ran:edittextHint="128"
                ran:textviewText="@string/binNumber"/>

            <Button
                android:id="@+id/awesomeqr_main_generate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_create"/>

            <Button
                android:id="@+id/awesomeqr_mainButton_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_save"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/awesomeqr_main_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
