<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/read_galleryTextView_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/read_galleryTextView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:enabled="true"
            android:focusable="true"
            android:longClickable="true"
            android:text="@string/long_press_to_copy_result"
            android:textIsSelectable="true" />

        <Button
            android:id="@+id/read_galleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/read_galleryButton_createAwesomeQR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_awesomeqr"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/read_gallery_autoread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_screenshot" />
    </LinearLayout>
</RelativeLayout>
