<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pixiv_download_main_browser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/pixiv_download_main_edittext_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/link" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pixiv_download_main_button_pre_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/add_favorite" />

                <Button
                    android:id="@+id/pixiv_download_main_button_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/download" />

                <CheckBox
                    android:id="@+id/pixiv_download_main_checkbox_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/get_all_pictures" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.meng.picTools.lib.MaterialDesign.FloatingActionMenu
            android:id="@+id/menu_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="10dp"
            fab:menu_colorNormal="#1565C0"
            fab:menu_colorPressed="#2272CD"
            fab:menu_colorRipple="#62B2FF"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/ic_star">

            <com.meng.picTools.lib.MaterialDesign.FloatingActionButton
                android:id="@+id/fab_add_mine"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star" />

            <com.meng.picTools.lib.MaterialDesign.FloatingActionButton
                android:id="@+id/fab_add_pixiv"
                style="@style/MenuButtonsSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star" />

        </com.meng.picTools.lib.MaterialDesign.FloatingActionMenu>

        <com.meng.picTools.lib.MaterialDesign.FloatingActionButton
            android:id="@+id/fab_start_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_progress"
            fab:fab_hideAnimation="@anim/hide_to_bottom"
            fab:fab_showAnimation="@anim/show_from_bottom" />
    </FrameLayout>
</LinearLayout>
